--- a/myapp/templates/playvideo.html
+++ b/myapp/templates/playvideo.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <video controls>
-        <source src="{% static 'videos/models.mp4' %}" type="video/mp4">
+        <source src="{% static 'videos/' %}" type="video/webm">
         Your browser does not support the video tag.
     </video>
 </body>
